[tool.poetry]
name = "gamescraper"
version = "0.1.0"
description = "A game API"
authors = ["Bill Fritz <uwbfritz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
